--- a/Regole.htm
+++ b/Regole.htm
@@ -9,6 +9,7 @@
         <title></title>
     </head>
     <body class="schermata_2">
+        <input type="button" value="indietro" class="indietro1" onclick="indietro()">
         <h1 class="titoloregole">REGOLE</h1>
             <p class="regole">Il gioco è ambientato durante la seconda guerra mondiale ed il giocatore, pilota di una nave della Royal Navy, ha l'obiettivo di eliminare un U-Boat tedesco che sta minacciando di distruggere un convoglio alleato. <br>
                 <br>
