--- a/Comandi.htm
+++ b/Comandi.htm
@@ -11,6 +11,7 @@
     <body class ="schermata_2"> 
         <div>
             <img src="image/Comandi.png" alt="Comandi di gioco" class="comandi">
+            <input type="button" value="indietro" class="indietro" onclick="indietro()">
         </div>
     </body>
 </html>
