--- a/Comandi.htm
+++ b/Comandi.htm
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" href="image/favicon.jpg">
         <script src="script.js"></script>
+        <script src="mobile.js"></script>
         <title></title>
     </head>
     <body class ="schermata_2"> 
