--- a/fine.htm
+++ b/fine.htm
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="mobile.css">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script src="script.js"></script>
+        <script src="mobile.js"></script>
         <title>Caccia all' UBoot</title>
     </head>
     <body class="schermata_2">
