--- a/gameplay.htm
+++ b/gameplay.htm
@@ -22,6 +22,7 @@
             <div id="abilita"></div>
         </div>
         <div id="campo"></div>
-        <audio controls loop src="sounds/soundtrack.mp3"></audio>
+        
+        <div class="spazaudio"><audio controls loop src="sounds/soundtrack.mp3"></audio></div>
     </body>
 </html>
