--- a/fine.htm
+++ b/fine.htm
@@ -10,6 +10,6 @@
         <title>Caccia all' UBoot</title>
     </head>
     <body class="schermata_2">
-        <div id="aaa"></div>
+        <div id="fine"></div>
     </body>
 </html>
