--- a/Gioco.htm
+++ b/Gioco.htm
@@ -10,6 +10,7 @@
         <title>Seleziona nave</title>
     </head>
     <body class="schermata_2">
+      <input type="button" value="indietro" class="indietro1" onclick="indietro()">
       <h1 class="titoloselezione"> Seleziona la tua nave </h1>
       <div id="container">
 
