--- a/fine.htm
+++ b/fine.htm
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="it">
-    <head>
-        <link rel="stylesheet" href="stile.css">
-        <link rel="icon" href="image/favicon.jpg">
-        <link rel="stylesheet" href="mobile.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <script src="script.js"></script>
-        <script src="mobile.js"></script>
-        <title>Caccia all' UBoot</title>
-    </head>
-    <body class="schermata_2">
-        <div id="fine"></div>
-    </body>
+  <head>
+    <link rel="stylesheet" href="stile.css" />
+    <link rel="icon" href="image/favicon.jpg" />
+    <link rel="stylesheet" href="mobile.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="script.js"></script>
+    <script src="mobile.js"></script>
+    <title>Caccia all' UBoot</title>
+  </head>
+  <body class="schermata_2">
+    <div id="fine"></div>
+    <button class="bott2" id="classifica" onclick="classifica()">
+      classifica
+    </button>
+  </body>
 </html>
